Fix inertial scrolling on iOS devices

--- a/app/assets/stylesheets/components/_lightbox.sass
+++ b/app/assets/stylesheets/components/_lightbox.sass
@@ -21,7 +21,7 @@
         display: block
 
 .lightbox__wrapper
-  -webkit-overflow-scrolling:touch
+  -webkit-overflow-scrolling: touch
   overflow-y: scroll
   overflow-x: hidden
   height: 100%
@@ -77,4 +77,4 @@
 
 .lightbox--noscroll
   overflow: hidden
-
+  -webkit-overflow-scrolling: touch
